edição das paginas
Edição das pagina de cadastro

--- a/app/view/listauser.html
+++ b/app/view/listauser.html
@@ -1,28 +1,59 @@
 {% extends "main.html" %}
-
 {% block main %}
-
-<div class="container mt-5">
+<div class="container">
     <div class="row">
         <div class="col-12">
             <div class="card mt-2">
                 <div class="card-header">
-                    <a href="/usuario/cadastro" class="btn btn-success"> Cadastrar</a>
+                    <h2>Lista de Usuários</h2>
+                    <a href="/usuario/cadastro" class="btn btn-success">Cadastrar</a>
                 </div>
                 <div class="card-body">
-                    <table class="table table-success table-striped">
+                    <table class="table table-striped table-hover">
                         <thead>
-                            <tr>Codigo</tr>
-                            <tr>Nome</tr>
-                            <tr>Sobremome</tr>
-                            <tr>ação</tr>
-                            
+                            <tr>
+                                <th><i class="fa-solid fa-barcode"></i>Código</th>
+                                <th><i class="fa-solid fa-address-card"></i>Nome</th>
+                                <th><i class="fa-solid fa-address-card"></i>Sobrenome</th>
+                                <th><i class="fa-solid fa-ghost"></i>Ação</th>
+                            </tr>
                         </thead>
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>Willian</td>
+                                <td>Pereira</td>
+                                <td>
+                                    <button type="button" class="btn btn-danger">
+                                        <i class="fa-solid fa-trash"></i>
+                                        Excluir
+                                    </button>
+                                    <button type="button" class="btn btn-warning">
+                                        <i class="fa-solid fa-pen"></i>
+                                        Editar
+                                    </button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Willian</td>
+                                <td>Pereira</td>
+                                <td>
+                                    <button type="button" class="btn btn-danger">
+                                        <i class="fa-solid fa-trash"></i>
+                                        Excluir
+                                    </button>
+                                    <button type="button" class="btn btn-warning">
+                                        <i class="fa-solid fa-pen"></i>
+                                        Editar
+                                    </button>
+                                </td>
+                            </tr>
+                        </tbody>
                     </table>
                 </div>
             </div>
         </div>
-
     </div>
-
-    {% endblock %}
+</div>
+{% endblock %}
