--- a/app/view/cliente.html
+++ b/app/view/cliente.html
@@ -28,13 +28,8 @@
                     required>
             </div>
             <div class="col-md-4">
-                <label for="tel" class="form-label">Celular</label>
-                <input type="text" class="form-control" id="tel" name="tel" placeholder="Por favor digite o telefone"
-                    required>
-            </div>
-            <div class="col-md-4">
-                <label for="tel" class="form-label">Senha</label>
-                <input type="password" class="form-control" id="senha" name="senha" placeholder="Por favor digite o sua Senha"
+                <label for="tel" class="form-label">Contato</label>
+                <input type="text" class="form-control" id="tel" name="tel" placeholder="Por favor digite numero para contato"
                     required>
             </div>
             <div class="col-12">
@@ -47,5 +42,5 @@
 
 {% block script %}
 {% include "script.html" %}
-<script defer type="module" src="/js/user.js"></script>
+<script defer type="module" src="/js/cliente.js"></script>
 {% endblock %}
