--- a/app/view/listacliente.html
+++ b/app/view/listacliente.html
@@ -5,8 +5,8 @@
         <div class="col-12">
             <div class="card mt-2">
                 <div class="card-header">
-                    <h2>Lista de Usuários</h2>
-                    <a href="/usuario/cadastro" class="btn btn-success">Cadastrar</a>
+                    <h2>Lista de Cliente</h2>
+                    <a href="/cliente/cadastro" class="btn btn-success">Cadastrar</a>
                 </div>
                 <div class="card-body">
                     <table class="table table-striped table-hover">
@@ -14,18 +14,16 @@
                             <tr>
                                 <th><i class="fa-solid fa-address-card"></i>Nome</th>
                                 <th><i class="fa-solid fa-address-card"></i>Sobrenome</th>
-                                <th><i class="fa-solid fa-address-card"></i>CPF</th>
-                                <th><i class="fa-solid fa-address-card"></i>RG</th>
+                                <th><i class="fa-solid fa-address-card"></i>CPF/CNPJ</th>
+                                <th><i class="fa-solid fa-address-card"></i>RG/IE</th>
                                 <th><i class="fa-solid fa-at"></i>E-Mail</th>
                                 <th><i class="fa-solid fa-address-card"></i>celular</th>
-                                <th><i class="fa-solid fa-address-card"></i>senha</th>
                                 <th><i class="fa-solid fa-ghost"></i>Ação</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
                                 <td>Willian</td>
-                                <td>Pereira</td>
                                 <td>Pereira</td>
                                 <td>Pereira</td>
                                 <td>Pereira</td>
@@ -44,7 +42,6 @@
                             </tr>
                             <tr>
                                 <td>Willian</td>
-                                <td>Pereira</td>
                                 <td>Pereira</td>
                                 <td>Pereira</td>
                                 <td>Pereira</td>
