--- a/app/view/main.html
+++ b/app/view/main.html
@@ -11,12 +11,15 @@
 <body>
 
     {% include "menu.html"%}
-    
+
     {% block main %}
-    
+
     {% endblock %}
 
+    {% block script %}
     {% include "script.html"%}
+    {% endblock %}
+
 </body>
 
 </html>
